# AndyClaw

./: AGENT_DISPLAY_AND_SHIZUKU_NOTES.md  AGENT_VIRTUAL_DISPLAY.md  CLAUDE.md  README.md  SECURITY_AUDIT.mdx  SYSTEM_PROMPT.md  info.md
.cursor/skills/andyclaw-emoticons/: SKILL.md
.github/workflows/: release.yml
AndyClaw/: build.gradle.kts
AndyClaw/src/main/java/org/ethereumphone/andyclaw/ExecutionEngine/: EngineBuilder.kt  ExecutionBatchResult.kt  ExecutionCallbacks.kt  ExecutionMetrics.kt  ParallelExecutionEngine.kt  PostProcessor.kt  PreflightCheck.kt  ToolCall.kt  ToolCallResult.kt  ToolExecResult.kt  ToolExecutor.kt
AndyClaw/src/main/java/org/ethereumphone/andyclaw/agenttx/: AgentTxRepository.kt
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/org/ethereumphone/andyclaw/: ChatInputBarTest.kt  TermuxConnectionTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/os/: IAgentAccessibilityProxy.aidl  IAgentDisplayService.aidl
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/cpp/whisper/: defines.h
app/src/main/java/org/ethereumphone/andyclaw/: MainActivity.kt  NodeApp.kt  NodeForegroundService.kt  NodeRuntime.kt  SecurePrefs.kt
app/src/main/res/drawable/: back_icon.xml  black.xml  content_copy.xml  search_icon.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/xml/: agent_display_a11y_config.xml  backup_rules.xml  data_extraction_rules.xml
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tinfoil-bridge/go/: bridge.go
(+183 files in other folders)
